# erydanos

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build_push.yml  publish_release.yml
app/: Cargo.toml
app/src/: main.rs  random_coeffs.rs  search_optimized_coeffs.rs  ulp.rs
src/: abs.rs  acos.rs  acosf.rs  asin.rs  asinf.rs  atan.rs  atan2.rs  atan2f.rs  atanf.rs  cbrt.rs  cbrtf.rs  ceil.rs  ceilf.rs  cos.rs  cosf.rs  double_precision.rs  exp.rs  expf.rs  floor.rs  fmax.rs  fmaxf.rs  fmin.rs  fminf.rs  generalf.rs  hypot.rs  hypot3.rs  hypot3f.rs  hypot4.rs  hypot4f.rs  hypotf.rs  lib.rs  ln.rs  lnf.rs  pow.rs  powf.rs  shuffle.rs  sin.rs  sinf.rs  sqrt.rs  sqrtf.rs  (+3 more)
src/avx/: acos.rs  acosf.rs  asin.rs  asinf.rs  atan.rs  atan2.rs  atan2f.rs  atanf.rs  cbrtf.rs  cos.rs  cosf.rs  epi32.rs  epi64.rs  exp.rs  expf.rs  fmod.rs  fmodf.rs  general.rs  generalf.rs  hypot.rs  hypot3.rs  hypot3f.rs  hypot4.rs  hypot4f.rs  hypotf.rs  ln.rs  lnf.rs  mod.rs  pow.rs  powf.rs  saturation_epi32.rs  sin.rs  sinf.rs  tan.rs  tanf.rs
src/neon/: acos.rs  acosf.rs  asin.rs  asinf.rs  atan2f.rs  atanf.rs  cbrt.rs  cbrtf.rs  ceil.rs  ceilf.rs  cos.rs  cosf.rs  exp.rs  expf.rs  float128.rs  floor.rs  floorf.rs  fmod.rs  fmodf.rs  general.rs  hypot.rs  hypot3.rs  hypot3f.rs  hypot4.rs  hypot4f.rs  hypotf.rs  ln.rs  lnf.rs  mod.rs  modf.rs  poly128.rs  pow.rs  powf.rs  sin.rs  sinf.rs  tan.rs  tanf.rs
src/sse/: acos.rs  acosf.rs  asin.rs  asinf.rs  atan.rs  atan2.rs  atan2f.rs  atanf.rs  cbrt.rs  cbrtf.rs  cos.rs  cosf.rs  epi32.rs  epi64.rs  exp.rs  (+24 more)
(+1 files in other folders)
